Bug 267760 - Can't dismiss search box with Esc after switching channels
Summary: Can't dismiss search box with Esc after switching channels
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: inputline (other bugs)
Version First Reported In: Git
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-06 07:33 UTC by Nicolás Alvarez
Modified: 2011-04-27 11:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolás Alvarez 2011-03-06 07:33:26 UTC
*Sometimes*, pressing Esc to dismiss the search box gives an "ambiguous shortcut" message. Today I figured out the exact circumstances that make it fail:

- open the search box (Ctrl-F)
- switch to another channel tab
- switch back to the channel with the search box open
- make sure the search input field is *not* focused (for me, it never is after a channel tab switch, but just in case)
- press Esc to close the search box

An "ambiguous shortcut" popup appears. Focusing the search input box first makes Esc work as expected. Manually focusing the IRC inputline without switching channel tabs also works; switching tabs is important to make it fail.

This is related to bug 257298.
Comment 1 Eike Hein 2011-04-27 11:33:57 UTC
While investigating this right now, the whole thing is actually more broken than just that - after the search bar has been opened, the Esc-to-focus-input box generally stops working, unless a view switch occurs which reenables the action (which is also the cause of the ambiguity).
Comment 2 Eike Hein 2011-04-27 11:42:23 UTC
Git commit 2d50fd4bf02e80d109f70a7c1d49c9cdf6226f6e by Eike Hein.
Committed on 27/04/2011 at 11:49.
Pushed by hein into branch 'master'.

Fix interaction between the search bar close shortcut and Focus Input Box.

Relevant only with the default shortcut for Focus Input Box, which is
ESC. Within a given tab Focus Input Box would stop working after the
search bar had been opened, and after switching tabs forth-and-back there
would be an ambiguous shortcut dialog box on triggering Focus Input Box
when the search bar was open in the first tab.

BUG:267760

M  +1    -3    src/viewer/searchbar.cpp     

http://commits.kde.org/konversation/2d50fd4bf02e80d109f70a7c1d49c9cdf6226f6e