Fix interaction between the search bar close shortcut and Focus Input Box.

Relevant only with the default shortcut for Focus Input Box, which is
ESC. Within a given tab Focus Input Box would stop working after the
search bar had been opened, and after switching tabs forth-and-back there
would be an ambiguous shortcut dialog box on triggering Focus Input Box
when the search bar was open in the first tab.

BUG:267760